# keyframe

./: LICENSE  README.md  cms.nix  create_streams.py  default.nix  genstreamkey.sh  http.nix  ingest.nix  ingestd.nix  prosody.nix  rtmpauth.nix  stream.html  streams.nix
cms/: default.nix  go.mod  go.sum
cms/configuration/: load.go  trustedproxies.go
cms/httpcontext/: trustedclient.go
cms/httpserver/: httpserver.go
cms/log/: log.go
cms/streamredirect/: main.go  schema.sql
doc/: overview.wiki
gpac/: 0001-Check-the-prefix-for-share-and-module-directories.patch  0002-Add-ability-to-inherit-a-UNIX-socket.patch  default.nix
ingestd/: Cargo.toml  default.nix  shell.nix
ingestd/ingestd-httpd/: Cargo.toml
ingestd/ingestd-httpd/src/: get.rs  http.rs  main.rs  put.rs  tee.rs
ingestd/ingestd-httpd/src/fs/: driver.rs  mod.rs  read.rs  ring.rs
ingestd/ingestd-httpd/src/ring/: mod.rs  queue.rs
ingestd/ingestd-srt/: Cargo.toml  schema.sql
ingestd/ingestd-srt/src/: gpac.rs  log.rs  main.rs  notify.rs  pidfd.rs  shared.rs  srt.rs  stream_db.rs  syscall.rs
ingestd/libsrt-sys/: Cargo.toml  build.rs  wrapper.h
rtmpauth/: default.nix  go.mod  main.go
stream-muc-manager/: default.nix  go.mod  go.sum  main.go
systemd-socket-activation-shim/: default.nix  systemd-socket-activation-shim.c
ui/: .eslintrc.js  default.nix  licenses.nix  node-packages.nix  node2nix.sh  package-lock.json  package.json  update-license-paths.sh  vue.config.js
webapp/: .eslintrc.js  README.md  default.nix  ember-cli-build.js  node-packages.nix  package-lock.json  package.json
(+45 files in other folders)
