[package]
name = "ingestd-httpd"
version = "0.1.0"
authors = ["Shell Turner <shell@alterednarrative.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-dup = "1.2.1"
async-h1 = { path = "../async-h1" }
http-types = "2.3.0"
futures = "0.3.5"
nix = "0.17.0"
path-clean = "0.1.0"
percent-encoding = "2.1.0"
scopeguard = "1.1.0"
slab = "0.4.2"
smol = "0.1.18"
unicycle = "0.6.3"
async-task = "3.0.0"
ringbahn = "0.0.0-experimental.3"
thiserror = "1.0.20"
iou = "0.0.0-ringbahn.1"
owning_ref = "0.4.1"
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
